--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 # If you prefer the allow list template instead of the deny list, see community template:
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 #
@@ -30,3 +31,7 @@ go.work.sum
 # Editor/IDE
 # .idea/
 # .vscode/
+
+# Exercise content is subject to Three Dots Labs' copyright.
+**/exercise.md
+
